--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "https": "^1.0.0",
+    "http": "^0.0.1-security",
     "nodemailer": "^6.9.3",
     "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
