--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.9.3",
     "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
   }
 }
