--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "scripts": {
+    "start": "tsc && node dist/index.js",
+    "dev": "tsc --watch & nodemon --inspect dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "engines": {
     "node": ">=10"
-  },
-  "scripts": {
-    "start": "npx tsc && node dist/index.js",
-    "dev": "npx tsc && nodemon --inspect dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
